syntax = "proto2";


///////////////////////////////////////////////////////////////////
//topic: video/facepicture
message VideoFacePicture
{	
    required string face_id = 1;
    required bytes face_img = 2;
}
